--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
