--- a/package.json
+++ b/package.json
@@ -7,17 +7,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "nanoid": "^3.3.0",
-    "node-sass": "^7.0.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "react-confetti": "^6.0.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.0",
-    "react-use": "^17.3.2",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "react-use": "^17.4.0",
+    "sass": "^1.57.1",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
